2002-11-30 Ales Hvezda   <ahvezda@geda.seul.org>

        * lib/system-gschlasrc.in: Changed the variable names which hold
        the paths to the data and rc directories.

	* scripts/Makefile.am: Added gschemdoc to distclean target

        * aclocal.m4: Removed file from cvs.

	* src/Makefile.am: Added -lm to olib LD_FLAGS

2002-11-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/gschemdoc.sh: Added %20filetype:pdf to the google search
	to increase the likelyhood of getting the datasheet.  Suggested by
	Antonio A Todo Bom.

	* scripts/gschemdoc.sh: Applied the patch by Gabriel Paubert to 
	this file to fix the which problems reported on geda-dev.  Thanks.

2002-11-04 Egil Kvaleberg       <egil@kvaleberg.no>

	* configure.in: Changed AC_PROG_LEX to AM_PROG_LEX to cater for 
	automake 1.6.3. Note that this also requires that autoreconf is
	run.

2002-11-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/gschupdate, scripts/symupdate: Oops, these scripts will
	break if an attribute has a ='s in it.  Fixed this by passing 2 as
	the LIMIT to perl's split.

        * configure.in: Updated version to 20021103 (an official version)

2002-10-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/gschemdoc.sh: Changed the manual which is brought up when
	you run gschemdoc -m (from gschem.txt go gedadocs.html).

	* scripts/gschemdoc.sh: Added phoenix to the list of browsers.

	* scripts/gschemdoc.sh: Added another echo to output which browser
	has been found.

2002-10-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/olib.l geda_sym_format.h: Added Mario Pascucci's olib converter.

	* README.olib: Added README for above.

2002-10-28 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Bumped version to 20021031

2002-10-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure and friends: Ran "autoreconf --force --install -v" 
	to really upgrade to the newest version of the auto* tools.

	* scripts/gschemdoc: Applied Egil's patch to remove the -- for