@@ -27,6 +27,7 @@
 /*	         input data (Chris Ellec)							 */
 /* 2002/08/14 Check for multiple instances of the same pin number and quit */
 /*            when this happens, give Fatal error messsage. (Chris Ellec)  */
+/* 2002/12/30 Change to new file format (Chris Ellec), version 20021103  */
 /*-----------------------------------------------------------------------*/
 /* This program is free software; you can redistribute it and/or modify  */
 /* it under the terms of the GNU General Public License as published by  */
@@ -192,7 +193,7 @@ int main(int argc,char **argv)
       }
   line_nub=-1;
 
-  printf("v 20000704\n"); /* The v character is the version of the file AVH */
+  printf("v 20021103\n"); /* The v character is the version of the file AVH */
 
   while (fgets(LineBuf,sizeof(LineBuf)-1,stream) != NULL)
         {
@@ -278,7 +279,8 @@ void pin_add(int pos_x,int pos_y,char *pin,int shape,int dir,char *name, char *t
 
   if (shape == LINE_SHAPE)
      {
-     printf("P %d %d %d %d %d\n",pos_x,pos_y,
+     /* Added "0 1" to match the new file format for pins - Chris Ellec */
+     printf("P %d %d %d %d %d 0 1\n",pos_x,pos_y,
                                  pos_x-pin_len*xdir,pos_y-pin_len*ydir,
 			         WHITE);
      printf("{\n");
@@ -286,7 +288,7 @@ void pin_add(int pos_x,int pos_y,char *pin,int shape,int dir,char *name, char *t
   else if (shape == DOT_SHAPE)
      {
      printf("V %d %d 50 %d\n",pos_x-50*xdir,pos_y-50*ydir,CYAN);
-     printf("P %d %d %d %d %d\n",pos_x-100*xdir,pos_y-100*ydir,
+     printf("P %d %d %d %d %d 0 1\n",pos_x-100*xdir,pos_y-100*ydir,
                                  pos_x-pin_len*xdir,pos_y-pin_len*ydir,
 			         WHITE);
      printf("{\n");
@@ -297,7 +299,7 @@ void pin_add(int pos_x,int pos_y,char *pin,int shape,int dir,char *name, char *t
                                  pos_x+100*xdir,pos_y+100*ydir,GREEN);
      printf("L %d %d %d %d %d\n",pos_x+100*ydir,pos_y+100*xdir,
                                  pos_x+100*xdir,pos_y+100*ydir,GREEN);
-     printf("P %d %d %d %d %d\n",pos_x,pos_y,
+     printf("P %d %d %d %d %d 0 1\n",pos_x,pos_y,
                                  pos_x-pin_len*xdir,pos_y-pin_len*ydir,
 				 WHITE);
      printf("{\n");
@@ -435,7 +437,9 @@ int make_box(int fldcnt,char *pFields[])
   }
 
 
-  printf("B %d %d %d %d %d\n",pos_x,pos_y,BoxWidth,BoxHeight,GREEN);
+     /* new file format: x y width height color width 
+     end type length space filling fillwidth angle1 pitch1 angle2 pitch2 */
+  printf("B %d %d %d %d %d 0 0 0 -1 -1 0 0 -1 -1 -1 -1\n",pos_x,pos_y,BoxWidth,BoxHeight,GREEN);
   printf("T %d %d %d %d 0 0 0 0\n",pos_x,pos_y+BoxHeight+700,YELLOW,font_size);
   printf("device=%s\n",device);
   printf("T %d %d %d %d 0 0 0 0\n",pos_x,pos_y+BoxHeight+900,YELLOW,font_size);
